Bug 1873801: Make sure pseudo codecs are after real codecs in priority order. r=mjf a=pascalc

Depends on D199784

Differential Revision: https://phabricator.services.mozilla.com/D199785