dom/media/webrtc/jsep/JsepTrack.cpp
@@ -480,7 +480,10 @@ std::vector<UniquePtr<JsepCodecDescription>> JsepTrack::NegotiateCodecs(
     Maybe<const SdpMediaSection&> local) {
   std::vector<UniquePtr<JsepCodecDescription>> negotiatedCodecs;
   std::vector<UniquePtr<JsepCodecDescription>> newPrototypeCodecs;
-  bool onlyRedUlpFec = true;
+  // "Pseudo codecs" include things that aren't actually stand-alone codecs (ie;
+  // ulpfec, red, rtx).
+  std::vector<UniquePtr<JsepCodecDescription>> negotiatedPseudoCodecs;
+  std::vector<UniquePtr<JsepCodecDescription>> newPrototypePseudoCodecs;
 
   // Outer loop establishes the remote side's preference
   for (const std::string& fmt : remote.GetFormats()) {
@@ -515,24 +518,35 @@ std::vector<UniquePtr<JsepCodecDescription>> JsepTrack::NegotiateCodecs(
           videoCodec->mRtxPayloadType = cloneVideoCodec->mRtxPayloadType;
         }
 
-        if (codec->mName != "red" && codec->mName != "ulpfec") {
-          onlyRedUlpFec = false;
-        }
-
         // Moves the codec out of mPrototypeCodecs, leaving an empty
         // UniquePtr, so we don't use it again. Also causes successfully
         // negotiated codecs to be placed up front in the future.
-        newPrototypeCodecs.emplace_back(std::move(codec));
-        negotiatedCodecs.emplace_back(std::move(clone));
+        if (codec->mName == "red" || codec->mName == "ulpfec" ||
+            codec->mName == "rtx") {
+          newPrototypePseudoCodecs.emplace_back(std::move(codec));
+          negotiatedPseudoCodecs.emplace_back(std::move(clone));
+        } else {
+          newPrototypeCodecs.emplace_back(std::move(codec));
+          negotiatedCodecs.emplace_back(std::move(clone));
+        }
         break;
       }
     }
   }
 
-  if (onlyRedUlpFec) {
-    // We don't have any codecs we can actually use. Clearing so we don't
-    // attempt to create a connection signaling only RED and/or ULPFEC.
-    negotiatedCodecs.clear();
+  if (negotiatedCodecs.empty()) {
+    // We don't have any real codecs. Clearing so we don't attempt to create a
+    // connection signaling only RED and/or ULPFEC.
+    negotiatedPseudoCodecs.clear();
+  }
+
+  // Put the pseudo codecs at the back
+  for (auto& pseudoCodec : negotiatedPseudoCodecs) {
+    negotiatedCodecs.emplace_back(std::move(pseudoCodec));
+  }
+
+  for (auto& pseudoCodec : newPrototypePseudoCodecs) {
+    newPrototypeCodecs.emplace_back(std::move(pseudoCodec));
   }
 
   // newPrototypeCodecs contains just the negotiated stuff so far. Add the rest.
